# SampleGitHubActions

./: .gitignore  README.md  main.py  requirements.txt  requirements_unix.txt  requirements_windows.txt  setup.cfg
.github/workflows/: test.yml  tests.yml
src/: board.py  console.py  key.py  key_unix.py  key_windows.py  setting.py  tetris.py  tetromino.py
src/tetris/: board.py  console.py  game.py  tetromino.py
test/board/: test_board.py
test/test_game/: test_game.py
test/tetromino/: conftest.py  test_tetromino.py
tests/: test_doc.md
tests/tetromino/: conftest.py
