[metadata]
name = tetris
version = 0.0.1
description = tetris in console (windows)
long_description = file: README.md
long_description_content_type = text/markdown

[options]
install_requires =
    keyboard
package_dir =
    =src
package = find:

[options.extras_require]
develop =
    flake8
    pytest

